# pdf2epub

./: .gitignore  README.md  converter.ipynb  converter.py  pyproject.toml  requirements.txt
converter/: __main__.py  converter.py  router.py  schemas.py
