[tool.poetry]
name = "pdf2txt2epub"
version = "0.1.0"
description = "PDF to EPUB converter."
authors = ["varvara-krasavina <varvara.krasavina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
pdf2image = "^1.16.3"
pypandoc = "^1.11"
pytesseract = "^0.3.10"
tqdm = "^4.65.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pydocstyle = "^6.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
