[tool.poetry]
name = "pdf2epub"
version = "0.1.0"
description = "PDF to EPUB converter."
authors = ["varvara-krasavina <varvara.krasavina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
pdf2image = "^1.17.0"
pypandoc = "^1.16.2"
pytesseract = "^0.3.13"
tqdm = "^4.67.1"
fastapi = "^0.123.4"
uvicorn = "^0.38.0"
python-multipart = "^0.0.20"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.11.0"
pydocstyle = "^6.3.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
